<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/item1"
        android:icon="@drawable/ic_item_1"
        android:title="@string/item_1"
        app:showAsAction="ifRoom"
        android:visible="true"
        />
    <item
        android:id="@+id/item2"
        android:icon="@drawable/ic_item_2"
        android:title="@string/item_2"
        app:showAsAction="ifRoom"
        android:visible="true"
        />
    <item
        android:id="@+id/item3"
        android:icon="@drawable/ic_item_3"
        android:title="@string/item_3"
        app:showAsAction="ifRoom"
        android:visible="true"
        />
    <item
        android:id="@+id/item4"
        android:icon="@drawable/ic_item_4"
        android:title="@string/item_4"
        app:showAsAction="ifRoom"
        android:visible="true"
        />
    <item
        android:id="@+id/item5"
        android:icon="@drawable/ic_item_5"
        android:title="@string/item_5"
        app:showAsAction="ifRoom"
        android:visible="true"
        />
</menu>