<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="300dp"
    app:cardCornerRadius="8dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_country_origin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/country"
                android:textColor="@color/desc"/>

            <TextView
                android:id="@+id/tv_expiration_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/date"
                android:textColor="@color/desc"/>

            <TextView
                android:id="@+id/tv_storage_temp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/temp"
                android:textColor="@color/desc"/>

            <TextView
                android:id="@+id/tv_calories"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/calories"
                android:textColor="@color/desc"/>

            <TextView
                android:id="@+id/tv_proteins"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/proteins"
                android:textColor="@color/desc"/>

            <TextView
                android:id="@+id/tv_fats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:text="@string/fats"
                android:textColor="@color/desc"/>

            <TextView
                android:id="@+id/tv_carbohydrates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/carbohydrates"
                android:textColor="@color/desc"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="20dp">

            <TextView
                android:id="@+id/tv_country_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:gravity="end"
                android:layout_marginEnd="15dp"
                android:text="@string/country_value"
                android:textColor="@color/country"/>

            <TextView
                android:id="@+id/tv_date_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:gravity="end"
                android:layout_marginEnd="15dp"
                android:text="@string/date_value"
                android:textColor="@color/desc"/>

            <TextView
                android:id="@+id/tv_temperature_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:gravity="end"
                android:layout_marginEnd="15dp"
                android:text="@string/temp_value"
                android:textColor="@color/desc"/>

            <TextView
                android:id="@+id/tv_calories_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:gravity="end"
                android:layout_marginEnd="15dp"
                android:text="@string/calories_value"
                android:textColor="@color/desc"/>

            <TextView
                android:id="@+id/tv_proteins_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:gravity="end"
                android:layout_marginEnd="15dp"
                android:text="@string/proteins_value"
                android:textColor="@color/desc"/>

            <TextView
                android:id="@+id/tv_fats_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="20dp"
                android:gravity="end"
                android:layout_marginEnd="15dp"
                android:text="@string/fats_value"
                android:textColor="@color/desc"/>

            <TextView
                android:id="@+id/tv_carbohydrates_value"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="end"
                android:layout_marginEnd="15dp"
                android:text="@string/carbohydrates_value"
                android:textColor="@color/desc"/>
        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>